objects/BPStorage__c.object
<CustomObject>
    <fields>
        <fullName>BPAssociated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner Associated</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(3 AND 4 AND 1 AND 2 AND 7) OR (5 AND 6 AND 4 AND 1 AND 2 AND 7) OR ( NOT (3 OR 5) AND 1 AND 2 AND 7)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enterprise - Business Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.InactiveAccount__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Direct Touch</value>
            </filterItems>
            <filterItems>
                <field>Account.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Channel Manager</value>
            </filterItems>
            <filterItems>
                <field>Account.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.PrimaryBP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BP&apos;s Storage</relationshipLabel>
        <relationshipName>BP_s_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field used in Business Partner Lookup filters</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>BP&apos;s Storage</relationshipLabel>
        <relationshipName>BP_s_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_EMG_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy EMG Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Engagement__c</fullName>
        <label>Transf. Partner Level of Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityAssociated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Associated</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Secondary Business Partner</relationshipLabel>
        <relationshipName>BP_s_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryBP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field used in Business Partner Lookup filters</description>
        <label>PrimaryBP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BP&apos;s Storage (PrimaryBP)</relationshipLabel>
        <relationshipName>BP_s_Storage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Partner</fullName>
                    <default>true</default>
                    <label>Business Partner</label>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Third Party Partner</fullName>
                </value>
                <value>
                    <fullName>Transformational Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BP Storage</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>BP Storage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BP&apos;s Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>